Grease Pencil Convert Issue #38135

Closed
opened 2014-01-09 02:37:59 +01:00 by NG · 9 comments

System Information
Win 7 Gtx 560 TI 2GB

Blender Version
2.69.8 7647a2b

Short description of error

There seems to be an issue when converting grease pencil strokes to curves. My aim is to use a nurbs circle to be the "bevel object" to extrude along a path or bezier curve, using curve properties menu.

When I create a nurbs curve primitive (path or bezier) this works fine. However when I use a curve that has been converted from a grease pencil stroke, it doesn't work at all (referring to bevel object)

Infact, the actual converted curve seems to disappear in the viewport unless it is selected via outliner.

Exact steps for others to reproduce the error

  1. Create a curve circle
  2. Draw a grease pencil line (ctrl +D + right click drag)
  3. Convert that grease stroke to a path or bezier
  4. Access curve properties, and try to use circle as Bevel Object

File below contains two grease pencil convert curves (they fail), and one nurbs path (that works)

curveissue.blend

**System Information** Win 7 Gtx 560 TI 2GB **Blender Version** 2.69.8 7647a2b **Short description of error** There seems to be an issue when converting grease pencil strokes to curves. My aim is to use a nurbs circle to be the "bevel object" to extrude along a path or bezier curve, using curve properties menu. When I create a nurbs curve primitive (path or bezier) this works fine. However when I use a curve that has been converted from a grease pencil stroke, it doesn't work at all (referring to bevel object) Infact, the actual converted curve seems to disappear in the viewport unless it is selected via outliner. **Exact steps for others to reproduce the error** 1. Create a curve circle 2. Draw a grease pencil line (ctrl +D + right click drag) 3. Convert that grease stroke to a path or bezier 4. Access curve properties, and try to use circle as Bevel Object File below contains two grease pencil convert curves (they fail), and one nurbs path (that works) [curveissue.blend](https://archive.blender.org/developer/F64730/curveissue.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NGMAT

Added subscriber: @NGMAT
Bastien Montagne self-assigned this 2014-01-09 10:25:07 +01:00

Yeah, seems like with first and last point of converted curve have their radius set to zero… Can be nice for hand-drawn strokes, but not good for poly- or single-lines.

Yeah, seems like with first and last point of converted curve have their radius set to zero… Can be nice for hand-drawn strokes, but not good for poly- or single-lines.
Author

Added subscriber: @mont29

Added subscriber: @mont29
Author

@mont29 are you saying this is a mistake I am making? or the code?

@mont29 are you saying this is a mistake I am making? or the code?

This issue was referenced by blender/blender-addons-contrib@08eaa8daac

This issue was referenced by blender/blender-addons-contrib@08eaa8daacc6457cc77ebd28b4c469d7db35784f

This issue was referenced by 08eaa8daac

This issue was referenced by 08eaa8daacc6457cc77ebd28b4c469d7db35784f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 08eaa8daac.

Closed by commit 08eaa8daac.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38135
No description provided.